--- a/TNV_Monitoring/platformio.ini
+++ b/TNV_Monitoring/platformio.ini
@@ -9,10 +9,9 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = espressif32
+platform = espressif32 @ 6.5.0
 board = esp32dev
 framework = arduino
-board_upload.flash_size = 8MB
-build_flags =
-   -DBOARD_HAS_PSRAM
-   -mfix-esp32-psram-cache-issue
+board_build.arduino.upstream_packages = yes
+board_build.arduino.version = 3.0.0
+monitor_speed = 115200
