--- a/TNV_Monitoring/platformio.ini
+++ b/TNV_Monitoring/platformio.ini
@@ -15,3 +15,12 @@ framework = arduino
 board_build.arduino.upstream_packages = yes
 board_build.arduino.version = 3.0.0
 monitor_speed = 115200
+lib_deps = 
+	kosme/arduinoFFT@^2.0.4
+	adafruit/Adafruit GFX Library@^1.12.1
+    adafruit/Adafruit SSD1306@^2.5.15
+    kosme/fix_fft@^1.0
+    arduino-libraries/Ethernet @ ~2.0.2
+    paulstoffregen/OneWire @ ~2.3.8
+    milesburton/DallasTemperature @ 4.0.4
+    cgjgh/modbus-esp8266 @ 4.1.1
